Add GitPath as a replacement for Path, as the latter is case sensitive This produces problems when doing caseOnly-Renamings, such as DoStuff.java to Dostuff.java