@@ -1,20 +1,21 @@
 package de.viadee.sonarIssueScoring.service.desirability;
 
+import java.util.List;
+import java.util.Map;
+import java.util.stream.Collectors;
+
+import org.sonarqube.ws.Issues.Issue;
+import org.springframework.stereotype.Service;
+
 import com.google.common.collect.ImmutableMultiset;
 import com.google.common.collect.Maps;
+
 import de.viadee.sonarIssueScoring.service.PredictionParams;
 import de.viadee.sonarIssueScoring.service.desirability.calculation.RatingProvider;
 import de.viadee.sonarIssueScoring.service.prediction.PredictionResult;
 import de.viadee.sonarIssueScoring.service.prediction.PredictionService;
+import de.viadee.sonarIssueScoring.service.prediction.load.GitPath;
 import de.viadee.sonarIssueScoring.service.sonar.SonarIssueSource;
-import org.sonarqube.ws.Issues.Issue;
-import org.springframework.stereotype.Service;
-
-import java.nio.file.Path;
-import java.nio.file.Paths;
-import java.util.List;
-import java.util.Map;
-import java.util.stream.Collectors;
 
 /**
  * Main orchestrator for the calculation of the Desirability-Score
@@ -38,7 +39,7 @@ public class DesirabilitySource {
                 userPreferences.h2oUrl());
 
         //Required for merging component ids back to filenames
-        PathSuffixLookup<Path> realPathLookup = new PathSuffixLookup<>(Maps.uniqueIndex(prediction.results().keySet(), p -> p));
+        PathSuffixLookup<GitPath> realPathLookup = new PathSuffixLookup<>(Maps.uniqueIndex(prediction.results().keySet(), p -> p));
 
         ImmutableMultiset<String> componentCounts = issues.stream().map(Issue::getComponent).collect(ImmutableMultiset.toImmutableMultiset());
 
@@ -46,11 +47,11 @@ public class DesirabilitySource {
                 Collectors.toMap(Issue::getKey, issue -> createDesirabilityInformation(issue, realPathLookup, prediction, userPreferences, componentCounts)));
     }
 
-    private IssueDesirability createDesirabilityInformation(Issue issue, PathSuffixLookup<Path> realPathLookup, PredictionResult prediction,
+    private IssueDesirability createDesirabilityInformation(Issue issue, PathSuffixLookup<GitPath> realPathLookup, PredictionResult prediction,
                                                             UserPreferences userPreferences, ImmutableMultiset<String> componentCounts) {
 
         //There is no way to get the path in the repository from information from the sonarQube api.
-        Path path = Paths.get(issue.getComponent().substring(issue.getComponent().lastIndexOf(':') + 1));
+        GitPath path = GitPath.of(issue.getComponent().substring(issue.getComponent().lastIndexOf(':') + 1));
 
         List<Rating> ratings = ratingProviders.stream().
                 map(r -> r.createRating(issue, prediction, realPathLookup.getOrDefault(path, path), userPreferences, componentCounts)). //Gather all ratings
